samples/_failures_safe/1761664701_79a1f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96d8c59b.c: In function ‘analyze_results’:
./samples/SAFE/__tmp_96d8c59b.c:141:34: error: expected ‘)’ at end of input
  141 |     if (analyzer->total_words > 0
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_96d8c59b.c:141:5: error: expected declaration or statement at end of input
  141 |     if (analyzer->total_words > 0
      |     ^~
